--- a/styles/other.css
+++ b/styles/other.css
@@ -132,3 +132,56 @@ main section{
 main section p{
 	font-size: 1em;
 }
+
+@media (max-width: 1170px){
+	main header h1{
+		font-size: 2.5em;
+	}
+	main{
+		padding: 0 3em;
+	}
+}
+
+@media (max-width:960px){
+	main{
+		justify-content: flex-start;
+		align-items: center;
+		padding: 5em 3em;
+	}
+}
+
+@media (max-width:660px){
+	nav{
+		min-width: auto;
+	}
+}
+
+@media (max-width: 620px){
+	body{
+		overflow: auto;
+		flex-direction: column;
+		width: 100%;
+		height: auto;
+		/* margin: 0 auto; */
+	}
+
+	main{
+		padding: 2em 0.5em;
+		min-width: auto;
+	}
+
+	nav{
+		min-width: inherit;
+	}
+	nav ul{
+		height: auto;
+		margin: 0.1rem auto;
+		font-size: 1em;
+		/* height: 0vh; */
+		transition: all 500ms ease;
+	}
+	nav ul li{
+		margin: 1rem auto;
+		font-size: 0.8em;
+	}
+}
